--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Check contents of files or stdin to see if they're all equal.",
   "main": "dist/index.js",
   "license": "MIT",
+  "repository": "AndersDJohnson/files-compare",
   "bin": {
     "files-compare": "./dist/cli.js"
   },
